--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "eslint": "eslint migrations/**/*.js test/**/*.js app/webpack.config.js app/src/**/*.js",
     "solium": "solium -d contracts",
-    "lint": "npm run eslint && npm run solium"
+    "lint": "npm run eslint && npm run solium",
+    "migrate:rinkeby": "dotenv -- truffle migrate --reset --network rinkeby"
   },
   "dependencies": {
     "openzeppelin-solidity": "^2.1.2",
     "truffle-hdwallet-provider": "^1.0.2"
   },
   "devDependencies": {
+    "dotenv-cli": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
